# DECS

kv-server/: CMakeLists.txt  README.md  helper.txt  plot_results.py  readme2.md  run_all_workloads.sh
kv-server/client/: client.cpp
kv-server/config/: server_config.json
kv-server/csv/: cpu_getpopular_c1024.csv  cpu_getpopular_c128.csv  cpu_getpopular_c16.csv  cpu_getpopular_c2048.csv  cpu_getpopular_c256.csv  cpu_getpopular_c32.csv  cpu_getpopular_c512.csv  cpu_getpopular_c64.csv  cpu_getpopular_c8.csv  io_getall_c1024.csv  io_getall_c128.csv  io_getall_c16.csv  io_getall_c2048.csv  io_getall_c256.csv  io_getall_c32.csv  io_getall_c512.csv  io_getall_c64.csv  io_getall_c8.csv  putall_c1024.csv  putall_c128.csv  putall_c16.csv  putall_c2048.csv  putall_c256.csv  putall_c32.csv  putall_c512.csv  putall_c64.csv  putall_c8.csv
kv-server/csv1/: cpu_getpopular_c128.csv  cpu_getpopular_c16.csv  cpu_getpopular_c32.csv  cpu_getpopular_c64.csv  cpu_getpopular_c8.csv  io_getall_c128.csv  io_getall_c16.csv  io_getall_c32.csv  io_getall_c64.csv  io_getall_c8.csv  putall_c128.csv  putall_c16.csv  putall_c32.csv  putall_c64.csv  putall_c8.csv
kv-server/include/: cache.h  config.h  database.h  load_generator.h  server.h  utils.h
kv-server/loadgen/: load_generator.cpp  loadgen_main.cpp
kv-server/src/: cache.cpp  config.cpp  database.cpp  main.cpp  server.cpp  utils.cpp
kv-server/tests/: test_cache.cpp  test_database.cpp  test_server.cpp
